--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <H1>Hello World</H1>
+    <H1 style="color: azure;">Hello World</H1>
     <h3>This is first attempt</h3>
 </body>
 </html>
